--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -13,8 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
+    - run: git submodule update --init --recursive
     - name: make
       run: make
     - name: make test
