--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_C_STANDARD 99)
 add_library(libc_vector
 		srcs/vector.c
 		include/vector.h
-		srcs/utils.c include_internal/utils.h main.c)
+		srcs/utils.c include_internal/utils.h main.c main_string.c)
 
 include_directories(include libft/include)
