--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.17)
 project(libc_vector C)
 
 set(CMAKE_C_STANDARD 99)
 
+file(GLOB source_files "srcs/*.c")
+file(GLOB headers "include_internal/*.h")
+file(GLOB test_files "test/*.c")
+
 add_library(libc_vector
-		srcs/vector.c
-		include/vector.h
-		srcs/utils.c include_internal/utils.h main.c main_string.c)
+		${source_files}
+		${test_files}
+		${headers}
+)
 
 include_directories(include libft/include)
